Server/src/main/kotlin/com/example/p2p_stock/errors/UserNotFoundException.kt
package com.example.p2p_stock.errors

class UserNotFoundException(message: String) : RuntimeException(message)
